Fixed grid axis alignment issues

--- a/raccoon-tools-editor-lite/src/app/components/visualizer/visualizer.component.scss
+++ b/raccoon-tools-editor-lite/src/app/components/visualizer/visualizer.component.scss
@@ -128,13 +128,14 @@
   }
 
   .axis-label {
-    height: 50px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
     border-bottom: 1px solid #ddd;
     color: #495057;
+    flex: 1;
   }
 }
 
@@ -164,16 +165,6 @@
     color: #495057;
     min-width: 50px;
   }
-}
-
-.x-axis-title {
-  position: absolute;
-  right: -25px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-weight: bold;
-  writing-mode: vertical-rl;
-  text-orientation: mixed;
 }
 
 .grid {
